--- a/templates/towers.html
+++ b/templates/towers.html
@@ -30,6 +30,14 @@ nav {
     align-items: center;
 }
 
+main {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    padding: 3rem 1rem;
+    width: 100%; 
+}
+
 
 @media (max-width: 420px) {
     .payout-grid {
@@ -296,6 +304,8 @@ input[type=number] {
 
 </style>
 
+<main>
+
 <div class="game-container">
 
     <div class="side-panel">
@@ -323,7 +333,7 @@ input[type=number] {
         </div>
     </div>
 </div>
-
+</main>
     <script>
 
             function adjustBet(multiplier) {
